# robelyrics

./: .env.example  .gitignore  CLAUDE.md  Caddyfile  README.md  docker-compose.prod.yml  docker-compose.yml
api/: Dockerfile  Dockerfile.prod  alembic.ini  pyproject.toml
api/alembic/: env.py
api/alembic/versions/: 21756b35c6dd_add_users_is_admin.py  32d6cf736a5d_add_lines_start_seconds_for_lrc_.py  4977bbd8b9a9_initial_schema.py  567cb06d73eb_seo_content_table.py  5ee24c23d924_fase3_newsletter_subscribers.py  8adfcb7065b6_add_youtube_id_to_songs.py  96d396b840e5_users_email_verified_at_email_.py  a3b4c5d6e7f8_entities_jsonb.py  a3f1c2d4e5b6_phantom_already_applied.py  ab9335b47dbf_fase3_posts_blog.py  b4c5d6e7f8a9_seo_templates_taxonomies.py  b7e9f1c4a2d3_revoked_tokens.py  c5d6e7f8a9b0_content_proposals.py  c8e3f4a5d1b9_password_resets.py  cf889329a32a_interpretation_sources_for_seo_only.py  d21b9eb53034_fase2_taxonomies_themes_places_concepts.py  d4f8c9b3e7a1_song_cover_url.py  d6e7f8a9b0c1_proposal_keywords.py  e1a2b3c4d5e6_editorial_post_robe.py  f2b3c4d5e6f7_persons_enrichment.py
api/app/: config.py  main.py
api/app/db/: models.py  session.py
api/app/routers/: admin.py  auth.py  catalog.py  public.py  search.py  sources.py
api/app/services/: auth.py  content_generator.py  email.py  embeddings.py  entity_resolver.py  (+10 more)
api/scripts/: embed_full_lyrics.py  embed_lyrics.py  ingest.py  match_covers.py  match_lrclib.py  match_youtube.py  seed_admin.py  seed_album_dates.py  seed_catalog.py  seed_persons.py  seed_taxonomies.py  transcribe_with_whisper.py
(+177 files in other folders)
