[project]
name = "robelyrics-api"
version = "0.1.0"
description = "FastAPI backend for RobeLyrics — semantic search over Extremoduro/Robe lyrics"
readme = "../README.md"
requires-python = ">=3.12"
dependencies = [
    # Web
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "python-multipart>=0.0.12",
    # DB
    "sqlalchemy>=2.0.36",
    "alembic>=1.14",
    "psycopg[binary]>=3.2",
    # Settings / validation
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    # Auth
    "python-jose[cryptography]>=3.3",
    "passlib[bcrypt]>=1.7.4",
    "slowapi>=0.1.9",
    # Vector / search
    "qdrant-client>=1.12",
    # LLM / embeddings
    "openai>=1.54",
    # Lyrics / sources
    "lyricsgenius>=3.0.1",
    "yt-dlp>=2025.1.15",
    "youtube-transcript-api>=0.6.2",
    "praw>=7.8",
    "beautifulsoup4>=4.12",
    "httpx>=0.27",
    # Utils
    "tenacity>=9.0",
    "pyyaml>=6.0",
    "python-slugify>=8.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.7",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]  # line-length lo gestiona el formatter

[tool.pytest.ini_options]
testpaths = ["app/tests"]
asyncio_mode = "auto"
